<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_friend_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_add" />

        <Button
            android:id="@+id/btn_friend_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_delete" />

        <Button
            android:id="@+id/btn_friend_group_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_group_delete" />

        <Button
            android:id="@+id/btn_friend_group_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_group_rename" />

        <Button
            android:id="@+id/btn_friend_change_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_change_group" />

        <Button
            android:id="@+id/btn_friend_add_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:text="@string/friend_add_group" />

        <Button
            android:id="@+id/btn_friend_get_friends_crc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_get_friends_crc" />

        <Button
            android:id="@+id/btn_friend_get_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_get_list" />

        <Button
            android:id="@+id/btn_friend_infor_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_infor_get" />

        <Button
            android:id="@+id/btn_friend_infor_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_infor_update" />

        <Button
            android:id="@+id/btn_friend_addsbook_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_addsbook_get" />

        <Button
            android:id="@+id/btn_friend_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_sync" />

        <Button
            android:id="@+id/btn_friend_upload_mrulist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_upload_mrulist" />

        <Button
            android:id="@+id/btn_friend_get_mrulist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:text="@string/friend_get_mrulist" />
    </LinearLayout>

</ScrollView>